syntax = "proto3";

option csharp_namespace = "ERP.Contracts.Finance";

package finance;

import "google/protobuf/timestamp.proto";

// Finance Service for financial management and reporting
service FinanceService {
  // Get hello message
  rpc GetHello(HelloRequest) returns (HelloResponse);
  
  // Get all invoices
  rpc GetInvoices(GetInvoicesRequest) returns (GetInvoicesResponse);
  
  // Get all transactions
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
  
  // Get financial summary report
  rpc GetFinancialSummary(GetFinancialSummaryRequest) returns (GetFinancialSummaryResponse);
  
  // Get health status
  rpc GetHealth(HealthRequest) returns (HealthResponse);
}

// Common messages
message HelloRequest {
  string user_id = 1;
  string user_name = 2;
  repeated string permissions = 3;
}

message HelloResponse {
  string message = 1;
  string service = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message HealthRequest {
}

message HealthResponse {
  string status = 1;
  string service = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Finance-specific messages
message GetInvoicesRequest {
  string user_id = 1;
  string user_name = 2;
  repeated string permissions = 3;
  int32 page = 4;
  int32 page_size = 5;
  string status = 6; // "pending", "paid", "overdue", "all"
}

message GetInvoicesResponse {
  repeated Invoice invoices = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetTransactionsRequest {
  string user_id = 1;
  string user_name = 2;
  repeated string permissions = 3;
  int32 page = 4;
  int32 page_size = 5;
  google.protobuf.Timestamp from_date = 6;
  google.protobuf.Timestamp to_date = 7;
}

message GetTransactionsResponse {
  repeated Transaction transactions = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetFinancialSummaryRequest {
  string user_id = 1;
  string user_name = 2;
  repeated string permissions = 3;
  google.protobuf.Timestamp from_date = 4;
  google.protobuf.Timestamp to_date = 5;
}

message GetFinancialSummaryResponse {
  double total_revenue = 1;
  double total_expenses = 2;
  double net_profit = 3;
  int32 total_invoices = 4;
  int32 paid_invoices = 5;
  int32 pending_invoices = 6;
  double accounts_receivable = 7;
  double accounts_payable = 8;
  google.protobuf.Timestamp generated_at = 9;
}

message Invoice {
  int32 id = 1;
  string invoice_number = 2;
  int32 customer_id = 3;
  string customer_name = 4;
  double amount = 5;
  string currency = 6;
  string status = 7; // "pending", "paid", "overdue", "cancelled"
  google.protobuf.Timestamp issue_date = 8;
  google.protobuf.Timestamp due_date = 9;
  google.protobuf.Timestamp paid_date = 10;
  string description = 11;
  repeated InvoiceItem items = 12;
}

message InvoiceItem {
  int32 id = 1;
  string description = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
}

message Transaction {
  int32 id = 1;
  string transaction_id = 2;
  string type = 3; // "income", "expense", "transfer"
  double amount = 4;
  string currency = 5;
  string description = 6;
  string category = 7;
  int32 account_id = 8;
  string account_name = 9;
  google.protobuf.Timestamp transaction_date = 10;
  google.protobuf.Timestamp created_at = 11;
  string reference = 12;
}
