syntax = "proto3";

option csharp_namespace = "ERP.Contracts.Inventory";

package inventory;

// Inventory Service for managing products and stock
service InventoryService {
  // Get product by ID
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  
  // Check product availability
  rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  
  // Reserve stock for order
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
  
  // Release reserved stock
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);
  
  // Update stock levels
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
  
  // Get low stock products
  rpc GetLowStockProducts(GetLowStockProductsRequest) returns (GetLowStockProductsResponse);
}

// Product messages
message Product {
  int32 id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  int32 current_stock = 5;
  int32 minimum_stock = 6;
  double price = 7;
  ProductCategory category = 8;
}

enum ProductCategory {
  ELECTRONICS = 0;
  FURNITURE = 1;
  OFFICE = 2;
  CLOTHING = 3;
  BOOKS = 4;
  OTHER = 5;
}

// Request/Response messages
message GetProductRequest {
  int32 product_id = 1;
}

message GetProductResponse {
  Product product = 1;
  bool found = 2;
  string error_message = 3;
}

message CheckAvailabilityRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message CheckAvailabilityResponse {
  bool available = 1;
  int32 available_quantity = 2;
  string message = 3;
}

message ReserveStockRequest {
  int32 product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
}

message ReserveStockResponse {
  bool success = 1;
  string reservation_id = 2;
  string error_message = 3;
}

message ReleaseStockRequest {
  string reservation_id = 1;
}

message ReleaseStockResponse {
  bool success = 1;
  string message = 2;
}

message UpdateStockRequest {
  int32 product_id = 1;
  int32 quantity = 2;
  StockOperation operation = 3;
}

enum StockOperation {
  ADD = 0;
  REMOVE = 1;
  SET = 2;
}

message UpdateStockResponse {
  bool success = 1;
  int32 new_stock_level = 2;
  string error_message = 3;
}

message GetLowStockProductsRequest {
  // Empty for now
}

message GetLowStockProductsResponse {
  repeated Product products = 1;
  int32 total_count = 2;
}
